demo fixes
