# troubleTicketDemo/carManufacturerService/src/main/resources/comp/openapi/carManu_troubleTicket.json
@@ -6,8 +6,8 @@
     "version": "2.0",
     "title": "API TroubleTicket"
   },
-  "host": "env-0693795.jelastic.servint.net",
-  "basePath":	"/",
+  "host": "localhost:8086",
+  "basePath": "/",
   "schemes": [
       "http"
   ],
@@ -18,39 +18,41 @@
       "application/json"
   ],  
   "paths": {    
-    "/troubleTicket": {        
-    "post": {
-      "tags": [
-         "troubleTicket"
-      ],            
-      "operationId": "troubleTicketCreate",
-      "summary": "troubleTicketCreate",
-      "description": "",       
-      "deprecated": false,
-      "parameters": [
-      
-                          
-        
-                      
-        {
-         "name": "troubleTicket",
-          "in": "body",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/TroubleTicket"
+    "/troubleTicket": { 
+         "post": {
+        "tags": [
+          "troubleTicket"
+        ],
+        "operationId": "troubleTicketCreate",
+        "summary": "troubleTicketCreate",
+        "description": "",
+        "deprecated": false,
+        "parameters": [
+          {
+            "name": "troubleTicket",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/TroubleTicket"
+            }
           }
-        }          
-      ],
-      "responses": {
-        "201": {
-          "description": "TroubleTicket",
-          "schema": {
-            "$ref": "#/definitions/TroubleTicket"
+        ],
+        "responses": {
+          "201": {
+            "description": "TroubleTicket",
+            "schema": {
+              "$ref": "#/definitions/TroubleTicket"
+            }
           }
-        }
-      }
-    }
-	,
+        },
+        "security": [
+          {
+            "oauth": [
+              "write_troubleTicket"
+            ]
+          }
+        ]
+      },       
     "get": {
       "tags": [
          "troubleTicket"
@@ -88,7 +90,7 @@
         }          
       }
     }
-	
+ 
     },    
     "/troubleTicket/{troubleTicketId}": {
     "get": {
@@ -132,7 +134,7 @@
           }
       }        
     }     
-	,
+ ,
     "patch": {
       "tags": [
          "troubleTicket"
@@ -171,7 +173,7 @@
           }
       }             
     }
-	,
+ ,
     "put": {
       "tags": [
          "troubleTicket"
@@ -210,7 +212,7 @@
           }
       }             
     }
-	
+ 
     },    
     "/hub": {        
     "post": {
@@ -244,7 +246,7 @@
         }
       }
     }
-	,
+ ,
     "get": {
       "tags": [
          "hub"
@@ -266,7 +268,7 @@
         }          
       }
     }
-	
+ 
     },    
     "/hub/{hubId}": {
     "delete": {
@@ -298,7 +300,7 @@
           }  
       }   
     }
-	,
+ ,
     "get": {
       "tags": [
          "hub"
@@ -331,7 +333,7 @@
           }
       }        
     }     
-	
+ 
     }
   },
 "definitions": {
@@ -543,4 +545,4 @@
   
   }
 }
-	
+ 
