# troubleTicketDemo/troubleTicketAPI/troubleTicketService/src/main/java/org/simplity/examples/TTServiceMain.java
@@ -3,18 +3,17 @@ package org.simplity.examples;
 import java.io.File;
 import java.net.URI;
 
-import org.glassfish.grizzly.http.server.CLStaticHttpHandler;
-import org.glassfish.grizzly.http.server.HttpHandler;
 import org.glassfish.grizzly.http.server.HttpServer;
 import org.glassfish.jersey.grizzly2.httpserver.GrizzlyHttpServerFactory;
 import org.glassfish.jersey.server.ResourceConfig;
-import org.simplity.examples.auth.oauth2.OAuth2AuthEndPoint;
-import org.simplity.examples.filter.AuthFilter;
 import org.simplity.examples.filter.CorsFilter;
-import org.simplity.examples.filter.EntryFilter;
+import org.simplity.examples.filter.TTServiceEntryFilter;
 import org.simplity.kernel.Application;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TTServiceMain {
+	final static Logger logger = LoggerFactory.getLogger(TTServiceConfig.class);
 	public static HttpServer server;
 
 	public static void main(String[] args) {
@@ -25,14 +24,13 @@ public class TTServiceMain {
 
 			try {
 				Application.bootStrap(folder);
-				TTServiceConfig.setApiPath(folder + "openapi" + File.separator + "troubleTicket.json");
+				TTServiceConfig.setApiPath(folder + "openapi" + File.separator + "tt_troubleTicket.json");
 			} catch (Exception e) {
-				System.err.println("error while bootstrapping with compFolder=" + folder);
-				e.printStackTrace(System.err);
+				logger.error("error while bootstrapping with compFolder=" + folder,e);
 				return;
 			}
 			ResourceConfig rc = new TTServiceConfig();
-			rc.register(EntryFilter.class);	
+			rc.register(TTServiceEntryFilter.class);	
 			rc.register(CorsFilter.class);			
 
 			server = GrizzlyHttpServerFactory.createHttpServer(new URI("http://localhost:8085/api"), rc);
@@ -40,7 +38,7 @@ public class TTServiceMain {
 			server.start();
 			Thread.currentThread().join();
 		} catch (Exception e) {
-			e.printStackTrace();
+			logger.error("Error is Service",e);
 			server.shutdown();
 		}
 	}
